criando fluxo para deletar um parceiro
