# src/app/factories/controllers/parceiro/get-all-parceiros-controller.js
@@ -1,0 +1,12 @@
+const {
+  GetAllParceirosController,
+} = require("../../../../presentation/controllers/parceiros/get-all-parceiroos");
+const {
+  getAllParceirosFactory,
+} = require("../../useCases/parceiro/get-all-parceiros");
+
+const getAllParceiroControllerFactory = function () {
+  return new GetAllParceirosController(getAllParceirosFactory());
+};
+
+exports.getAllParceirosControllerFactory = getAllParceiroControllerFactory;
